add `-XX:+UseCompactObjectHeaders` to default java arguments in config since there is no downside to it