@@ -33,7 +33,7 @@ public class RelauncherConfiguration {
     @SerializedName("javaPath")
     private String javaExecutablePath;
     @SerializedName("args")
-    private String javaArguments = "";
+    private String javaArguments = "-XX:+UseCompactObjectHeaders";
 
     public String getCleanroomVersion() {
         return cleanroomVersion;
